More z-index issues

--- a/blocks/edit/da-editor/da-editor.css
+++ b/blocks/edit/da-editor/da-editor.css
@@ -421,7 +421,7 @@ img.ProseMirror-separator {
   transform: translateY(-50%);
   grid-area: palettes;
   display: grid;
-  gap: 12px;
+  z-index: 2;
 }
 
 da-library.hide {
